# P1-Project

./: CMakeLists.txt  Guide to download GTK.docx  README.md  main.c
.packages/: cJSON.h
src/components/: action.c  action.h  button.c  button.h  flag.c  flag.h  icon.c  icon.h  label.c  label.h  listElements.c  listElements.h  menubar.c  menubar.h  separator.c  separator.h
src/configs/: constants.h
src/data/: medicine.json  residents.json
src/debug/: updating_storage.c
src/pages/: CasePage.c  CasePage.h  DosagePage.c  DosagePage.h  OrderPage.c  OrderPage.h  ResidentListPage.c  ResidentListPage.h  ResidentProfilePage.c  ResidentProfilePage.h  StoragePage.c  StoragePage.h
src/styles/: style.css
src/utils/: Checks.c  Checks.h  handlers.c  handlers.h  helpers.c  helpers.h
